Hopefully fixing scrolling on mobile

--- a/Games/2048/style.css
+++ b/Games/2048/style.css
@@ -13,7 +13,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vmax;
     background: #333;
     background-image: url('./pc.jpg');
     background-repeat: no-repeat;
